@@ -1,6 +1,7 @@
 pkgdatadir = $(datadir)/games/@PACKAGE@/graphics/objects
 
 pkgdata_DATA = basic_brick.png weird_brick.png red_oval_brick.png \
-               basic_paddle.png basic_ball.png
+               basic_paddle.png basic_ball.png \
+               ball.png paddle.png paddle_gun.png
 
 EXTRA_DIST = $(pkgdata_DATA)
